--- a/.env
+++ b/.env
@@ -14,6 +14,6 @@
 
 # GENERATE_SOURCEMAP=false
 #REACT_APP_BASE_URL=http://api.sls.tn
-REACT_APP_BASE_URL=http://57.129.38.15:3000
+#REACT_APP_BASE_URL=http://57.129.38.15:3000
 #REACT_APP_BASE_URL=${process.env.REACT_APP_BASE_URL}
-#REACT_APP_BASE_URL=http://localhost:3000
+REACT_APP_BASE_URL=http://localhost:3000
