--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "toner-react-backend",
+  "homepage": "https://leaders.smartschools.tn",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -68,7 +69,7 @@
     "react-select": "^5.8.0",
     "react-sweetalert2": "^0.6.0",
     "react-table": "^7.7.0",
-    "react-to-print": "^3.0.2",
+    "react-to-print": "^2.15.1",
     "redux-typescript": "^1.2.1",
     "sass": "^1.58.0",
     "simplebar-react": "^3.2.1",
