--- a/package.json
+++ b/package.json
@@ -111,5 +111,6 @@
   "devDependencies": {
     "@types/react-flatpickr": "^3.8.8",
     "@types/react-slider": "^1.3.1"
-  }
+  },
+  "packageManager": "yarn@4.4.1"
 }
